# rag-knowledge-assistant

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: corpus_sources.json
data/corpus/: attention_machine_learning.txt  confusion_matrix.txt  cosine_similarity.txt  cross_validation_statistics.txt  deep_learning.txt  feature_engineering.txt  gradient_boosting.txt  hyperparameter_optimization.txt  k_means_clustering.txt  large_language_model.txt  logistic_regression.txt  machine_learning.txt  natural_language_processing.txt  overfitting.txt  precision_and_recall.txt  random_forest.txt  regularization_mathematics.txt  retrieval_augmented_generation.txt  transformer_deep_learning.txt  vector_database.txt  word_embedding.txt
eval/: faithfulness_cases.jsonl  gold_retrieval.jsonl
reports/: faithfulness_eval.md  retrieval_eval.md
src/rag_knowledge_assistant/: __init__.py  api.py  chunking.py  embeddings.py  evaluation.py  faithfulness.py  generation.py  ingestion.py  logging_config.py  pipeline.py  retrieval.py
tests/: test_api.py  test_chunking.py  test_evaluation.py  test_faithfulness.py  test_generation.py  test_retrieval.py
