[project]
name = "rag-knowledge-assistant"
version = "0.1.0"
description = "RAG assistant with grounded citations and a real retrieval + faithfulness eval harness."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn>=1.9.0",
]

[project.scripts]
rag-knowledge-assistant = "rag_knowledge_assistant:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
